v1.9.5 update